change button styles

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ nav li a{
     font-size:1em;
     padding:15px;
     border-radius:5px;
-    box-shadow: 0px 3px 5px #000;
--moz-box-shadow: 0px 3px 5px #000;
--webkit-box-shadow: 0px 3px 5px #000;
+    box-shadow: 0px 2px 3px #000;
+    -moz-box-shadow: 0px 2px 3px #000;
+    -webkit-box-shadow: 0px 3px 5px #000;
 }
 nav li a:hover{
     box-shadow:none;
@@ -305,6 +305,13 @@ img{
     </nav>
     {/block:Pagination}
 </div>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $("This").hover(function(){
+            $("div").
+        })
+    })
+</script>
 </body>
 </html>
     
