more button changes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ nav li a{
     -moz-box-shadow: 0px 2px 3px #000;
     -webkit-box-shadow: 0px 3px 5px #000;
 }
-nav li a:hover{
+nav li a:active{
     box-shadow:none;
 }
 #masthead{
